# compiler

./: .gitignore  LICENSE  README.md
include/compiler/: syntax.hpp  syntax_analysis.hpp  syntax_analysis_lr.hpp
include/utils/automaton/: automaton.hpp
include/utils/graph/: directed_graph.hpp
include/utils/io/: smart_ifstream.hpp
include/utils/show/: graphShow.hpp
samples/: CMakeLists.txt  Makefile  client.py
samples/assets/code/: ui_code.txt
samples/assets/dfa/: dfa_define.txt  nfa_define.txt
samples/assets/lab2/: code_default.txt  lexical_default.txt  syntax_default.txt
samples/assets/syntax/: syntax_LL.txt  syntax_LL_if_else.txt  syntax_default.txt
samples/labs/: main.cpp  sample_lexer.cpp  sample_syntax_analysis.cpp
samples/utils/: sample_automaton.cpp  sample_directed_graph.cpp  sample_smart_ifstream.cpp
src/: client.py
